Updated Last Resort Page

--- a/html/LastResort.html
+++ b/html/LastResort.html
@@ -12,12 +12,16 @@
         <div class="work-div">
             <h1> What was the project?</h1>
             <p>This is the project I worked on for my third year of University. It is an online Co-op base defense shooter.</p>
-            <p> I worked on it in a big team of 29 People: 2 Producers, 1 Audio Designer, 4 Game Designers, 4 Level Designers, 2 Animators, 2 Riggers, 1 Prop Artist, 4 Character/Environment Artists, 2 Network Programmers, 1 Physics Programmer, 1 Generalist Programmer and 3 AI Programmer </p>
+            <p> I worked on it for a full year in a big team of 29 People: 2 Producers, 1 Audio Designer, 4 Game Designers, 4 Level Designers, 2 Animators, 2 Riggers, 1 Prop Artist, 4 Character/Environment Artists, 2 Network Programmers, 1 Physics Programmer, 1 Generalist Programmer and 3 AI Programmer </p>
             <p> We created the game in Unreal Engine using Blueprints and C++. My responsibilities were AI Programming.</p>
             </p>
             <p>
                 The game is set to release on Steam, first in Early Access and then by the end of the academic year as a full release. You can see the <a href="https://store.steampowered.com/app/1491650/Last_Resort/">Steam Page here.</a>
             </p>
+        </div>
+        <div class="work-div">
+            <h1> The Trailer </h1>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/ejPTK7T9AUk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="work-div">
             <h1> What did I learn?</h1>
