--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
                                 <h3>Languages: </h3>
                                 <p>Blueprints and C++</p>
                                 <h3>Duration: </h3>
-                                <p>27 Weeks (this far)</p>
+                                <p>32 Weeks</p>
                                 <h3>Team Size:</h3>
                                 <p>29 People</p>
                                 <h3>My Responsibilities:</h3>
                                 <p>AI programming</p>
+                                <h3>Trailer:</h3>
+                                <p><a href = "https://www.youtube.com/watch?v=ejPTK7T9AUk" target="_blank" rel="noreferrer">Link to the trailer</a></p>
                                 <h3>Steam Page:</h3>
                                 <p><a href="https://store.steampowered.com/app/1491650/Last_Resort/">Link.</a></p>
                             </div>
