Updating with StickyLock

--- a/index.html
+++ b/index.html
@@ -35,33 +35,6 @@
                     <h1 class = "page-title work-title">My work</h1>
                     <div class="card middle">
                         <div class = "front">
-                            <img class = "headimage" src = "Pictures/CrowdKing.png" alt = "Crowd King Banner Image">
-                            <h2>Crowd King</h2>
-                            <p>
-                                Crowd King was my year two project at Breda University of Applied Sciences. It is a cute platformer and available for download on itch.io
-                            </p>
-                        </div>
-                        <div class = "back" onclick="window.location.href='html/CrowdKing.html';">
-                            <div class = "back-content middle">
-                                <h3>Engine: </h3>
-                                <p>Unreal Engine 4</p>
-                                <h3>Languages: </h3>
-                                <p>C++ and Blueprints</p>
-                                <h3>Duration: </h3>
-                                <p>8 Weeks</p>
-                                <h3>Team Size:</h3>
-                                <p>12 People, 1 Producer, 4 Designers, 4 Artists <br> and 3 Programmers</p>
-                                <h3>My Responsibilities:</h3>
-                                <p>Gameplay programming (e.g. Hazards) <br> and VFX</p>
-                                <h3>Trailer:</h3>
-                                <p><a href = "https://youtu.be/2vPxmQ4hcLo" target="_blank" rel="noreferrer">Link to the trailer</a></p>
-                                <h3>Download:</h3>
-                                <p><a href = "https://igad.itch.io/crowdking" target="_blank" rel="noreferrer">Link to the itch.io page</a></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card middle">
-                        <div class = "front">
                             <img class = "headimage" src = "Pictures/LastResort.jpg" alt = "Last Resort Banner Image">
                             <h2>Last Resort</h2>
                             <p>
@@ -95,7 +68,7 @@
                         </div>
                         <div class = "back" onclick="window.location.href='html/Refense.html';">
                             <div class = "back-content middle">
-                                <h3>Languages: </h3>
+                                <h3>Language: </h3>
                                 <p>C++</p>
                                 <h3>Duration: </h3>
                                 <p>10 Weeks</p>
@@ -109,6 +82,31 @@
                             </div>
                         </div>
                     </div>
+                    <div class="card middle">
+                        <div class = "front">
+                            <img class = "headimage" src = "Pictures/histera.jpg" alt = "Histera Banner Image">
+                            <h2>Histera</h2>
+                            <p>
+                                Histera is the game I am working at for my internship at StickyLock! Histera is a rapid fire multiplayer shooter featuring dynamic deathmatch arenas that transform as you fight!
+                            </p>
+                        </div>
+                        <div class = "back" onclick="window.location.href='html/Histera.html';">
+                            <div class = "back-content middle">
+                                <h3>Engine: </h3>
+                                <p>Unity (DOTS)</p>
+                                <h3>Language: </h3>
+                                <p>C#</p>
+                                <h3>Duration: </h3>
+                                <p>40 Week Internship</p>
+                                <h3>My Responsibilities:</h3>
+                                <p>Bugfixing, Performance, Updating and implementing features</p>
+                                <h3>Trailer:</h3>
+                                <p><a href = "https://www.youtube.com/watch?v=IJ-pD_ZUP_k" target="_blank" rel="noreferrer">Link to the trailer</a></p>
+                                <h3>Steam Page:</h3>
+                                <p><a href = "https://store.steampowered.com/app/1674590/Histera/" target="_blank" rel="noreferrer">Wishlist now on Steam!</a></p>
+                            </div>
+                        </div>
+                    </div>
                     <button class = "btn btn2 more-work-btn" onclick = "window.location.href='html/MoreWork.html';">View more work</button>
                 </section>
                 <section class="big-section" id="about me">
@@ -117,7 +115,7 @@
                             <h1 class = "page-title">About me</h1>
                         </li>
                         <li class = "about-me-listpoint">
-                            <p>I am Martin Schenkel, a 21 year-old Game Development Student at Breda University of Applied Sciences. </p> 
+                            <p>I am Martin Schenkel, a 21 year-old Game Development Student at Breda University of Applied Sciences. <br>I am currently working as a Programming intern at StickyLock on their game Histera! Check out the "My Work" section for more details on that!</p> 
                         </li>
                         <li>
                             <br>
@@ -155,6 +153,8 @@
                                 <li><img class = "icon" alt = "GitHub icon" src = "Pictures/Icons/github.svg" onclick = "parent.open('https://github.com/')"></li>
                                 <li><img class = "icon" alt = "Rider icon" src = "Pictures/Icons/rider.png" onclick = "parent.open('https://www.jetbrains.com/rider/')"></li>
                                 <li><img class = "icon" alt = "Monday icon" src = "Pictures/Icons/Monday.svg" onclick = "parent.open('https://www.monday.com')"></li>
+                                <li><img class = "icon" alt = "Sourcetree icon" src = "Pictures/Icons/sourcetree.svg" onclick = "parent.open('https://www.sourcetreeapp.com/')"></li>
+                                <li><img class = "icon" alt = "Bitbucket icon" src = "Pictures/Icons/bitbucket.png" onclick = "parent.open('https://bitbucket.org/')"></li>
                                 <li><img class = "icon" alt = "Jira icon" src = "Pictures/Icons/jira.svg" onclick = "parent.open('https://www.atlassian.com/software/jira')"></li>
 
                             </ul>
@@ -187,7 +187,7 @@
 
         <footer> 
             <ul class ="footer-list">
-                <li>© Martin Schenkel 2020</li>
+                <li>© Martin Schenkel 2021</li>
             </ul>
         </footer>
     </body>
