--- a/html/MoreWork.html
+++ b/html/MoreWork.html
@@ -9,13 +9,23 @@
         <div class="more-work-header-div">
             <p> - Game Programming Projects - </p>
         </div>
+        <div class="more-work-div" onclick="window.location.href='Histera.html';">
+            <table>
+                <tr>
+                    <td id="Row1">
+                        <img src="../Pictures/histera.jpg" alt = "Histera Banner Image"></src></td>
+                    <td id="Row2">Histera is a rapid fire multiplayer shooter featuring dynamic deathmatch arenas that transform as you fight!</td>
+                    <td id="Row3">Time: 40 Week Internship <br> Language: C# <br> Engine: Unity (DOTS)</td>
+                </tr>
+            </table>
+        </div>
         <div class="more-work-div" onclick="window.location.href='LastResort.html';">
             <table>
                 <tr>
                     <td id="Row1">
                         <img src="../Pictures/LastResort.jpg" alt = "LastResort Banner Image"></src></td>
                     <td id="Row2">Last Resort is an online co-op base defense shooter with roguelike elements.</td>
-                    <td id="Row3">Team Size: 29 <br> Time: 27 Weeks (this far) <br> Languages: Blueprints and C++</td>
+                    <td id="Row3">Team Size: 29 <br> Time: 27 Weeks (this far) <br> Languages: Blueprints and C++ <br> Engine: Unreal Engine 4</td>
                 </tr>
             </table>
         </div>
@@ -35,7 +45,7 @@
                     <td id="Row1">
                         <img src="../Pictures/CrowdKing.png" alt = "Crowd King Banner Image"></src></td>
                     <td id="Row2">Crowd King is a top down platformer where you have to get through the level collecting as many minions as you can. Click for more info.</td>
-                    <td id="Row3">Team Size: 12 <br> Time: 8 Weeks <br> Languages: C++ and Blueprints</td>
+                    <td id="Row3">Team Size: 12 <br> Time: 8 Weeks <br> Languages: C++ and Blueprints <br> Engine: Unreal Engine 4</td>
                 </tr>
             </table>
         </div>
@@ -55,7 +65,7 @@
                     <td id="Row1">
                         <img src="../Pictures/DIY-Hero.JPG" alt = "DIY-Hero Banner Image"></src></td>
                     <td id="Row2">DIY Hero is a top down game, in which you play a little boy having to fight vegtables. Click for more info.</td>
-                    <td id="Row3">Team Size: 9 <br> Time: 8 Weeks  <br> Language: Blueprints</td>
+                    <td id="Row3">Team Size: 9 <br> Time: 8 Weeks  <br> Language: Blueprints <br> Engine: Unreal Engine 4</td>
                 </tr>
             </table>
         </div>
@@ -95,7 +105,7 @@
                     <td id="Row1">
                         <img src="../Pictures/hammerfly.png" alt = "HammerFly Banner Image"></src></td>
                     <td id="Row2">Hammer Fly is a mobile app that I created as a personal project. Click for more info.</td>
-                    <td id="Row3">Team Size: 1 <br> Time: 8 Weeks  <br> Language: C#</td>
+                    <td id="Row3">Team Size: 1 <br> Time: 8 Weeks  <br> Language: C# <br> Engine: Unity</td>
                 </tr>
             </table>
         </div>
@@ -122,9 +132,9 @@
                 </tr>
             </table>
         </div>
-        <div class="more-work-header-div">
+        <!--<div class="more-work-header-div">
             <p> - Other Projects - </p>
-        </div>
+        </div> -->
     </section>
     
 </body>
