Add IMDB Extension Part

--- a/html/MoreWork.html
+++ b/html/MoreWork.html
@@ -132,8 +132,18 @@
                 </tr>
             </table>
         </div>
+        <div class="more-work-div" onclick="window.location.href='IMDBExtension.html';">
+            <table>
+                <tr>
+                    <td id="Row1">
+                        <img src="../Pictures/IMDBExtension.png" alt = "IMDB Extension Banner Image"></src></td>
+                    <td id="Row2">I created a small Chrome Extension that displays the average rating an actor or actress has on shows during their career. Click for more info.</td>
+                    <td id="Row3">Team Size: 1 <br> Language: JavaScript</td>
+                </tr>
+            </table>
+        </div>
         <!--<div class="more-work-header-div">
-            <p> - Other Projects - </p>
+            <p> - Other non-programming Projects such as models, animations, particles, shaders etc - </p>
         </div> -->
     </section>
     
