Change Contact Details, More work now JS Generated

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <h1 class = "page-title">About me</h1>
                         </li>
                         <li class = "about-me-listpoint">
-                            <p>I am Martin Schenkel, a 21 year-old Game Development Student at Breda University of Applied Sciences. <br>I am currently working as a Programming intern at StickyLock on their game Histera! Check out the "My Work" section for more details on that!</p> 
+                            <p>I am Martin Schenkel, a 22-year-old Build Engineer at Rebellion. <br>Check out the "My Work" section!</p> 
                         </li>
                         <li>
                             <br>
@@ -127,6 +127,7 @@
                             <ul class = "icon-list">
                                 <li><img class = "icon" alt = "C++ icon" src = "Pictures/Icons/C++.svg" onclick = "parent.open('https://en.wikipedia.org/wiki/C%2B%2B')"></li>
                                 <li><img class = "icon" alt = "CSharp icon" src = "Pictures/Icons/CSharp.svg" onclick = "parent.open('https://en.wikipedia.org/wiki/C_Sharp_(programming_language)')"></li>
+                                <li><img class = "icon" alt = "Python icon" src = "Pictures/Icons/python.svg" onclick = "parent.open('https://www.python.org/')"></li>
                                 <li><img class = "icon" alt = "Java icon" src = "Pictures/Icons/Java.svg" onclick = "parent.open('https://www.java.com/en/')"></li>
                                 <li><img class = "icon" alt = "HTML5 icon" src = "Pictures/Icons/HTML5.svg" onclick = "parent.open('https://en.wikipedia.org/wiki/HTML5')"></li>
                                 <li><img class = "icon" alt = "JavaScript icon" src = "Pictures/Icons/JS.png" onclick = "parent.open('https://developer.mozilla.org/en-US/docs/Web/JavaScript')"></li>
@@ -168,15 +169,10 @@
                             <h1 class = "page-title">Contact me</h1>
                         </li>
                         <li class = "about-me-listpoint">
-                            <ul class = "contact-data">
-                                <li>Tasmanstraat 1</li>
-                                <li>4812GK Breda</li>
-                                <li>Netherlands</li>
-                            </ul>
                             <h3>My social links:</h3>
                             <ul class = "icon-list">
                                 <li><img class = "icon" alt = "Twitter icon" src = "Pictures/Icons/twitter.svg" onclick = "parent.open('https://twitter.com/SchenkelGameDev')"></li>
-                                <li><img class = "icon" alt = "LinkedIn icon" src = "Pictures/Icons/Linkedin.svg" onclick = "parent.open('https://www.linkedin.com/in/martin-schenkel-8231981bb/')"></li>
+                                <li><img class = "icon" alt = "LinkedIn icon" src = "Pictures/Icons/Linkedin.svg" onclick = "parent.open('https://www.linkedin.com/in/martin-schenkel/')"></li>
                                 <li><img class = "icon" alt = "Mail icon" src = "Pictures/Icons/mail.svg" onclick = "parent.open('mailto:martin.schenkel.ger@gmail.com')"></li>
                             </ul>
                         </li>
@@ -187,7 +183,7 @@
 
         <footer> 
             <ul class ="footer-list">
-                <li>© Martin Schenkel 2021</li>
+                <li>© Martin Schenkel 2022</li>
             </ul>
         </footer>
     </body>
