--- a/html/MoreWork.html
+++ b/html/MoreWork.html
@@ -5,147 +5,8 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <section class="work-section">
-        <div class="more-work-header-div">
-            <p> - Game Programming Projects - </p>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='Histera.html';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/histera.jpg" alt = "Histera Banner Image"></src></td>
-                    <td id="Row2">Histera is a rapid fire multiplayer shooter featuring dynamic deathmatch arenas that transform as you fight!</td>
-                    <td id="Row3">Time: 40 Week Internship <br> Language: C# <br> Engine: Unity (DOTS)</td>
-                </tr>
-            </table>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='LastResort.html';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/LastResort.jpg" alt = "LastResort Banner Image"></src></td>
-                    <td id="Row2">Last Resort is an online co-op base defense shooter with roguelike elements.</td>
-                    <td id="Row3">Team Size: 29 <br> Time: 27 Weeks (this far) <br> Languages: Blueprints and C++ <br> Engine: Unreal Engine 4</td>
-                </tr>
-            </table>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='Refense.html';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/RefenseLogo.png" alt = "Refense Banner Image"></src></td>
-                    <td id="Row2">Refense is a 2D Action game, in which you have to reflect enemy projectiles back at them in order to increase your highscore. Click for more info.</td>
-                    <td id="Row3">Team Size: 1 <br> Time: Around 40 Hours spread over 10 Weeks <br> Languages: C++</td>
-                </tr>
-            </table>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='CrowdKing.html';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/CrowdKing.png" alt = "Crowd King Banner Image"></src></td>
-                    <td id="Row2">Crowd King is a top down platformer where you have to get through the level collecting as many minions as you can. Click for more info.</td>
-                    <td id="Row3">Team Size: 12 <br> Time: 8 Weeks <br> Languages: C++ and Blueprints <br> Engine: Unreal Engine 4</td>
-                </tr>
-            </table>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='Empires.html';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/Empires.JPG" alt = "Empires Banner Image"></src></td>
-                    <td id="Row2">Empires is a RTS Game set in space, that was created for the Raspberry Pi. Click for more info.</td>
-                    <td id="Row3">Team Size: 1 <br> Time: 8 Weeks  <br> Language: C++</td>
-                </tr>
-            </table>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='DIYHero.html';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/DIY-Hero.JPG" alt = "DIY-Hero Banner Image"></src></td>
-                    <td id="Row2">DIY Hero is a top down game, in which you play a little boy having to fight vegtables. Click for more info.</td>
-                    <td id="Row3">Team Size: 9 <br> Time: 8 Weeks  <br> Language: Blueprints <br> Engine: Unreal Engine 4</td>
-                </tr>
-            </table>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='TetrisAI.html';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/Tetris.JPG" alt = "TetrisAI Banner Image"></src></td>
-                    <td id="Row2">I used genetic algorithms to teach my AI how to play Tetris. Click for more info.</td>
-                    <td id="Row3">Team Size: 1 <br> Time: 2 Weeks  <br> Language: C++</td>
-                </tr>
-            </table>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='AmpleEngine.html';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/AmpleMan.JPG" alt = "AmpleEngine Banner Image"></src></td>
-                    <td id="Row2">As a school project I had to create an engine and create a Megaman x2 clone with it. Click for more info.</td>
-                    <td id="Row3">Team Size: 3 <br> Time: 8 Weeks  <br> Language: C++</td>
-                </tr>
-            </table>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='RayTracer.html';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/RayTracer.png" alt = "RayTracer Banner Image"></src></td>
-                    <td id="Row2">In the first year of university, we had to create a (non-realtime) Ray Tracer that can handle reflection and refraction. Click for more info.</td>
-                    <td id="Row3">Team Size: 1 <br> Time: 8 Weeks  <br> Language: C++</td>
-                </tr>
-            </table>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='HammerFly.html';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/hammerfly.png" alt = "HammerFly Banner Image"></src></td>
-                    <td id="Row2">Hammer Fly is a mobile app that I created as a personal project. Click for more info.</td>
-                    <td id="Row3">Team Size: 1 <br> Time: 8 Weeks  <br> Language: C# <br> Engine: Unity</td>
-                </tr>
-            </table>
-        </div>
-        <div class="more-work-header-div">
-            <p> - Other Programming Projects - </p>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='PortfolioWebsite.html';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/Portfolio.png" alt = "Portfolio Website Banner Image"></src></td>
-                    <td id="Row2">I created this Portfolio Website myself from Scratch using nothing but HTML5 and CSS. <a href="https://github.com/MartinSchenkel/PortfolioWebsite">Github Link.</a> Click for more info.</td>
-                    <td id="Row3">Team Size: 1 <br> Languages: HTML5 and CSS</td>
-                </tr>
-            </table>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='PythonWebscraper.html';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/webscraper.png" alt = "Python Webscraper Banner Image"></src></td>
-                    <td id="Row2">I created a Python Webscraper, to get game stats from my friends and me to display on our <a href="https://asterior.de">Website.</a>  <a href="https://https://github.com/MartinSchenkel/PythonWebscraper">Github Link.</a> Click for more info.</td>
-                    <td id="Row3">Team Size: 1 <br> Language: Python</td>
-                </tr>
-            </table>
-        </div>
-        <div class="more-work-div" onclick="window.location.href='IMDBExtension.html';">
-            <table>
-                <tr>
-                    <td id="Row1">
-                        <img src="../Pictures/IMDBExtension.png" alt = "IMDB Extension Banner Image"></src></td>
-                    <td id="Row2">I created a small Chrome Extension that displays the average rating an actor or actress has on shows during their career. Click for more info.</td>
-                    <td id="Row3">Team Size: 1 <br> Language: JavaScript</td>
-                </tr>
-            </table>
-        </div>
-        <!--<div class="more-work-header-div">
-            <p> - Other non-programming Projects such as models, animations, particles, shaders etc - </p>
-        </div> -->
+    <script src="../moreWork.js"></script>
+    <section class="work-section" id="work-section">
     </section>
-    
 </body>
 </html>
